# halo2-tornado-nova

./: hardhat.config.js  package.json
circuits/: keypair.circom  merkleProof.circom  merkleTree.circom  poseidon.circom  poseidon_constants.circom  transaction.circom
contracts/: MerkleTreeWithHistory.sol
halo2-circuits/: Cargo.toml
halo2-circuits/src/: lib.rs  main.rs  plume.rs  poseidon.rs  spec.rs  transaction.rs  utils.rs
scripts/: buildCircuit.sh  compileHasher.js
src/: index.js  prover.js  utils.js
test/: full.test.js
