[package]
name = "halo2-tornado-nova-circuits"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
getset = "0.1.2"
halo2-base = { git = "https://github.com/ekrembal/halo2-lib.git", default-features = false, features = ["halo2-axiom", "test-utils"] }
halo2-ecc = { git = "https://github.com/ekrembal/halo2-lib.git", default-features = false, features = ["halo2-axiom"] }
snark-verifier-sdk = { git = "https://github.com/axiom-crypto/snark-verifier.git", branch = "community-edition", features=["revm"] }
itertools = "0.11"
k256 = { version = "0.13.3", features = ["arithmetic", "hash2curve", "expose-field", "sha2"]}
num-bigint = "0.4.4"
num-traits = "0.2.18"
poseidon-rs = { package = "poseidon-primitives", version = "=0.1.1" }
rand = "0.8.5"
serde = "1.0.197"
serde_json = "1.0.115"


